--- a/hybrid_cosy_spfs.tex
+++ b/hybrid_cosy_spfs.tex
@@ -1,4 +1,4 @@
-﻿\chapter{Compose dynamic symmetry handling}\label{chap:compose}
+\chapter{Compose dynamic symmetry handling}\label{chap:compose}
 \minitoc
 \section{Composition of SP and SymmSAT}
 In the previous chapter, we presented an approach that reuses the
@@ -12,7 +12,7 @@ dynamic approaches remained unsolvable by our approach and vice versa. This is
 particularly true when compared with the \textit{symmetry propagation} technique developed by
 Devriendt et al.~\cite{Devriendt12}.
 Hence, our goal is to explore the composition of our algorithm with the  \textit{symmetry propagation} technique in
-a new approach that would mix the advantages of the two classes of techniques while alleviating their drawbacks. At first sight,
+a new approach that would mix the advantages of the two classes of techniques while alleviating their drawbacks~\cite{metin2019composing}. At first sight,
 the two approaches appear to be orthogonal, and hence could be mixed easily. However, as we show in the rest of this chapter,
 this is not completely true: both theoretical and practical issues have to be analyzed and solved to get a
 running complementarity. 
