--- a/main.bib
+++ b/main.bib
@@ -66,6 +66,16 @@
   organization={Springer}
 }
 
+@inproceedings{metin2019composing,
+	title={Composing Symmetry Propagation and Effective Symmetry Breaking for SAT Solving},
+	author={Metin, Hakan and Baarir, Souheib and Kordon, Fabrice},
+	booktitle={NASA Formal Methods Symposium},
+	pages={316--332},
+	year={2019},
+	organization={Springer}
+}
+
+
 % SPFS
 @inproceedings{Devriendt12,
 	author    = {Jo Devriendt and
