--- a/defense/main.tex
+++ b/defense/main.tex
@@ -402,7 +402,7 @@ $\underbrace{(x_1 \lor x_2 \lor \neg x_3)}_{\text{Clause with literals } x_1, x_
 %% ----------------------------------------------------------------------------
 \begin{frame}
 \frametitle{CDCL in action TODO}
-
+Present unit propagation + conflit (clause learning)
 \begin{tikzpicture}
 \newcommand{\x}{2.07}
 \newcommand{\y}{-1.5}
@@ -605,12 +605,17 @@ Is it possible to attribute each group to a classroom?\\
 	
 	Inject additional constraints to the problem symmetry breaking predicates sbp\\
 	
+Different tools Shatter, BreakID
 \end{frame}
+
+
 
 %% ----------------------------------------------------------------------------
 \begin{frame}
 \frametitle{Example}
 TODO\\
+
+Show search tree and remove symmetrical search space tree
 
 \end{frame}
 
@@ -623,10 +628,11 @@ Accelerate tree traversal\\
 
 modify solver \\
 
+Different tools SP, SLS, SEL, ...
 \end{frame}
 %% ----------------------------------------------------------------------------
 \begin{frame}
-\frametitle{Symmetry Propagation a dynamic approach}
+\frametitle{Symmetry Propagation}
 TODO\\
 Present SP
 \end{frame}
@@ -635,7 +641,7 @@ Present SP
 \begin{frame}
 \frametitle{Example}
 TODO\\
-
+Build an example
 \end{frame}
 %% ----------------------------------------------------------------------------
 
